                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 04-10-2006 fixed: Reloading skin while in My Music Songs would cause the progress dialog to show endlessly.
 - 04-10-2006 fixed: memory stick shares were chooseable in the Add Source browser, even though they're plug n play.
 - 04-10-2006 fixed: special:// protocols (eg musicplaylists, cdrip etc.) always showed network overlays, even if they were local.
 - 03-10-2006 fixed: Huge playlists would cause major GUI slowdowns whenever track was changed from the Now Playing window.
 - 03-10-2006 fixed: Toggle button showed the incorrect label when using <usealttexture>
 - 03-10-2006 fixed: the feh and the userdata wiping didn't quite work as expected (i.e. it didnt work at all).
 - 03-10-2006 fixed: if you canceled the 'scan all / scan new' dialog in the music window, it would still scan.
 - 03-10-2006 fixed: ftp playback in mplayer where broken due to yet another url parsing mistake
 - 03-10-2006 changed: Scrollspeed of RSS feeds the same in all resolutions.
 - 03-10-2006 fixed: [ 1568300 ] Add/Edit Source Dialogue Remove all Paths bug.
 - 02-10-2006 added: [ 1568369 ] Fix for strange characters in web interface. thx to benmat!
 - 02-10-2006 fixed: [ 1568845 ] Unable to access Delete from context menu
 - 02-10-2006 fixed: don't allow preset locking if the visualisation has no presets.
 - 02-10-2006 fixed: [ 1561317 ] Browse and load RAR:ed subtitles don't work. also added zip support.
 - 02-10-2006 fixed: browse for artist thumb was a pita.
 - 01-10-2006 fixed: [ 1568291 ] Saving large playlist fails
 - 01-10-2006 fixed: [ 1568607 ] XBMC 2.0.0 Web Control bookmarks
 - 01-10-2006 fixed: [ 1568158 ] "Leave as Is" LED setting broken